--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input class="rate" type="text" value="0.2" />%
     </div>
     <div>
-        <input class="cal" onclick="cal()" type="button" value="算一下" />
+        <input class="btn cal" onclick="cal()" type="button" value="算一下" />
     </div>
 </body>
 <script>
