--- a/index.html
+++ b/index.html
@@ -2,39 +2,37 @@
 <html>
 
 <head>
-<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta charset='utf-8'>
     <title></title>
-    <link type='' rel='stylesheet' href='' />
+    <link type='text/css' rel='stylesheet' href='../bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css' />
 </head>
 
 <body>
-    <div>
-        <label>购入价格</label>
-        <input class="price" type="text" />
-    </div>
-    <div>
-        <label>手续费率</label>
-        <input class="rate" type="text" value="0.2" />%
-    </div>
-    <div>
-        <input class="btn cal" onclick="cal()" type="button" value="算一下" />
-    </div>
+    <form class="">
+        <div class="form-inline form-group">
+            <h1>
+                <span class="label label-info ">购入价格</span>
+                <input class="form-control price" type="text" />
+            </h1>
+        </div>
+        <div class="form-inline form-group">
+            <h1>
+                <span class="label label-info" for="">手续费率</span>
+                <input class="form-control rate" type="text" value="0.2" />%
+            </h1>
+        </div>
+        <div>
+            <input class="btn btn-primary btn-lg cal" onclick="cal()" type="button" value="算一下" />
+        </div>
+    </form>
 </body>
 <script>
     function cal() {
         let price = parseFloat(document.querySelector(".price").value);
-        let rate = (1-parseFloat(document.querySelector(".rate").value)/100);
-        let result = price/(rate*rate);
-        alert("当以"+result+"为单价售出时不亏！");
-      }
+        let rate = (1 - parseFloat(document.querySelector(".rate").value) / 100);
+        let result = price / (rate * rate);
+        alert("当以" + result + "为单价售出时不亏！");
+    }
 </script>
 
 </html>
