--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <title></title>
-    <link type='text/css' rel='stylesheet' href='../bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css' />
+    <link type='text/css' rel='stylesheet' href='bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css' />
 </head>
 
 <body>
